Add comments, solve some Sonar issues...