@@ -5,24 +5,34 @@ public class IntDouble implements Comparable<IntDouble> {
 	private int key;
 	private double value;
 
-	public IntDouble(int key, double value) {
+	public IntDouble(final int key, final double value) {
 		this.key = key;
 		this.value = value;
 	}
 
+	/**
+	 * Key getter
+	 * 
+	 * @return the key
+	 */
 	public int getKey() {
 		return key;
 	}
 
+	/**
+	 * Value getter
+	 * 
+	 * @return the value
+	 */
 	public double getValue() {
 		return value;
 	}
 
 	@Override
-	public int compareTo(IntDouble o) {
-		int result = Double.compare(o.value, this.value);
+	public int compareTo(final IntDouble other) {
+		final int result = Double.compare(other.value, this.value);
 		if (result == 0) {
-			return Integer.compare(o.key, this.key);
+			return Integer.compare(other.key, this.key);
 		}
 		return result;
 	}
@@ -34,12 +44,21 @@ public class IntDouble implements Comparable<IntDouble> {
 
 	@Override
 	public int hashCode() {
-		return new Integer(key).hashCode();
+		return Integer.valueOf(key).hashCode();
 	}
 
 	@Override
-	public boolean equals(Object o) {
-		return ((IntDouble) o).key == key;
+	public boolean equals(final Object other) {
+		if (other == null) {
+			return false;
+		}
+		if (other == this) {
+			return true;
+		}
+		if (!(other instanceof IntDouble)) {
+			return false;
+		}
+		return ((IntDouble) other).key == key;
 	}
 
 }
